fix function sign in, sign up, update profiile with image

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -75,7 +75,7 @@
     justify-content: center;
   }
   .icon__color{
-    color: #3BB77E;
+    color: #7B02EA;
   }
   strong{
     padding: 0px 10px;
