--- a/frontend/src/component/Cart/CartItemCard.css
+++ b/frontend/src/component/Cart/CartItemCard.css
@@ -27,7 +27,7 @@
   }
   
   .CartItemCard > div > p {
-    color: #3BB77E;
+    color: #7B02EA;
     font: 100 0.8vmax "Roboto";
     cursor: pointer;
   }
