--- a/frontend/src/component/Cart/CheckoutSteps.css
+++ b/frontend/src/component/Cart/CheckoutSteps.css
@@ -109,7 +109,7 @@
   }
   
   .orderSummary > button {
-    background-color: #3BB77E;
+    background-color: #7B02EA;
     color: white;
     width: 100%;
     padding: 1vmax;
@@ -121,7 +121,7 @@
   }
   
   .orderSummary > button:hover {
-    background-color: #3BB77E;
+    background-color: #7B02EA;
   }
   
   @media screen and (max-width: 600px) {
