--- a/frontend/src/component/Cart/payment.css
+++ b/frontend/src/component/Cart/payment.css
@@ -46,7 +46,7 @@
   
   .paymentFormBtn {
     border: none;
-    background-color: #3BB77E;
+    background-color: #7B02EA;
     color: white;
     font: 300 0.9vmax "Roboto";
     width: 100%;
@@ -57,7 +57,7 @@
   }
   
   .paymentFormBtn:hover {
-    background-color: #3BB77E;
+    background-color: #7B02EA;
   }
   
   @media screen and (max-width: 600px) {
