--- a/frontend/src/component/User/EditProfile.css
+++ b/frontend/src/component/User/EditProfile.css
@@ -242,7 +242,7 @@
 
 .updateProfileBtn {
   border: none;
-  background-color: #3BB77E;
+  background-color: #7B02EA;
   color: white;
   font: 300 0.9vmax "Roboto";
   width: 100%;
@@ -255,7 +255,7 @@
 }
 
 .updateProfileBtn:hover {
-  background-color: #3BB77E;
+  background-color: #7B02EA;
 }
 
 @media screen and (max-width: 600px) {
