--- a/frontend/src/component/User/myOrders.css
+++ b/frontend/src/component/User/myOrders.css
@@ -38,11 +38,11 @@
   }
   
   .myOrdersTable a:hover {
-    color: #3BB77E;
+    color: #7B02EA;
   }
   
   .MuiDataGrid-columnHeader {
-    background-color: #3BB77E;
+    background-color: #7B02EA;
     padding: 1vmax !important;
   }
   
