--- a/frontend/src/component/Cart/Favourite.css
+++ b/frontend/src/component/Cart/Favourite.css
@@ -10,7 +10,7 @@
   }
   .emptyfavourites > svg {
     font-size: 5vmax;
-    color: #3BB77E;
+    color: #7B02EA;
   }
   .emptyfavourites > p {
     font-size: 2vmax;
@@ -30,7 +30,7 @@
   }
   
   .favouritesHeader {
-    background-color: #3BB77E;
+    background-color: #7B02EA;
     width: 100%;
     box-sizing: border-box;
     margin: auto;
@@ -62,14 +62,14 @@
   
   .favouritesInput > button {
     border: none;
-    background-color: #3BB77E;
+    background-color: #7B02EA;
     padding: 0.5vmax;
     cursor: pointer;
     color: white;
     transition: all 0.5s;
   }
   .favouritesInput > button:hover {
-    background-color: #3BB77E;
+    background-color: #7B02EA;
   }
   
   .favouritesInput > input {
@@ -99,7 +99,7 @@
   }
   
   .favouritesGrossProfitBox {
-    border-top: 3px solid #3BB77E;
+    border-top: 3px solid #7B02EA;
     margin: 1vmax 4vmax;
     box-sizing: border-box;
     padding: 2vmax 0;
@@ -113,7 +113,7 @@
     justify-content: flex-end;
   }
   .checkOutBtn > button {
-    background-color: #3BB77E;
+    background-color: #7B02EA;
     color: white;
     border: none;
     padding: 0.8vmax 3vmax;
