--- a/frontend/src/component/User/UpdatePassword.css
+++ b/frontend/src/component/User/UpdatePassword.css
@@ -66,7 +66,7 @@
   
   .updatePasswordBtn {
     border: none;
-    background-color: #3BB77E;
+    background-color: #7B02EA;
     color: white;
     font: 300 0.9vmax "Roboto";
     width: 100%;
@@ -79,7 +79,7 @@
   }
   
   .updatePasswordBtn:hover {
-    background-color: #3BB77E;
+    background-color: #7B02EA;
   }
   
   @media screen and (max-width: 600px) {
